# sae-feature-atlas

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: analysis_workflow.md  cli.md  concepts.md  configuration.md  corpus_guide.md  feature_cards.md  geometry_methods.md  inspection.md  metrics_guide.md  notebook_usage.md  project_overview.md  quickstart.md  reporting.md
docs/templates/: human_notes_template.md
examples/: simple_usage.py
reports/gemma31bpt_l13_res16k_pile10k_top32/: inspection_report.md  pilot_metrics.md  summary.md
scripts/: 00_smoke_test.py  01_collect_activations.py  02_build_feature_cards.py  inspect_bimodal_feature.py  inspect_feature.py  inspect_pair.py  run_default_pipeline.py
src/sae_feature_atlas/: __init__.py  activations.py  app.py  bundle.py  coactivation.py  config.py  coverage.py  dataset.py  datasets.py  feature_cards.py  feature_stats.py  features.py  filters.py  geometry.py  inspection.py  loaders.py  manifest.py  model_utils.py  pipeline.py  registry.py  reporting.py  space_analysis.py  steering_candidates.py  visualization.py
src/sae_feature_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sae_feature_atlas/activations/: collect.py
src/sae_feature_atlas/analysis/: bimodality.py  coverage.py  space.py  (+5 more)
src/sae_nla_rnd/: __init__.py  activations.py  config.py  dataset.py  features.py  filters.py  io_utils.py  manifest.py  model_utils.py
src/sae_nla_rnd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_corpus_summaries.py  test_datasets.py  test_presets.py  test_registry.py  test_token_quality.py
(+23 files in other folders)
