[project]
name = "sae-feature-atlas"
version = "0.3.0"
description = "Research toolkit for building SAE feature atlases over Gemma Scope models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Serafim Tkachenko" }
]

dependencies = [
    "torch",
    "transformer-lens",
    "sae-lens",
    "transformers",
    "datasets",
    "accelerate",
    "einops",
    "pandas",
    "pyarrow",
    "numpy",
    "scikit-learn",
    "umap-learn",
    "scipy",
    "tqdm",
    "matplotlib",
    "huggingface-hub",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
    "ruff",
]

[project.scripts]
sae-atlas = "sae_feature_atlas.app:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
